--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,6 +86,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .docs:hover {
